-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.2
-
None
-
ce400a4482 (qt-creator/qt-creator/7.0) ce400a4482 (qt-creator/tqtc-qt-creator/7.0) ce400a4482 (qt-creator/qt-creator/master) ce400a4482 (qt-creator/tqtc-qt-creator/master) ce400a4482 (qt-creator/qt-creator/qds-3.3)
In Qt Creator's File System view, when I click the funnel and uncheck "Show folders on top", then close and open the IDE, the box is checked again and folders are again sorted before files.
I think this should be remembered globally (or alternatively per session/project). Right now, it's remembered when you switch sessions, but not when you close the IDE.
This happens on Linux and Windows and Mac.
| For Gerrit Dashboard: QTCREATORBUG-27131 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 398671,2 | File System view: Fix persistence of Show Folders on Top | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |