File System view: Fix persistence of Show Folders on Top

Fixes: QTCREATORBUG-27131
Change-Id: I0252cc2d9f026873c7a6a8e70e457a8d150ca1c5
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: David Schulz <david.schulz@qt.io>